# SchemaSense

./: .gitignore  README.md
backend/: pyproject.toml  requirements.txt
backend/app/: config.py  db.py  db_provisioner.py  main.py
backend/app/middleware/: __init__.py  rate_limit.py
backend/app/models/: schema_model.py
backend/app/nl_to_sql/: openai_client.py  service.py  validator.py
backend/app/routes/: config.py  data.py  db_provision.py  history.py  nl.py  schema.py  sql.py
backend/app/schema/: cache.py  ddl_executor.py  instrospect.py  introspect.py
backend/app/utils/: __init__.py  audit_log.py  logging_utils.py  provisioning.py  session.py
backend/examples/: introspection_example.py
backend/scripts/: cleanup_ttl_dbs.py
backend/tests/: README_PHASE11_TESTS.md  demo_ddl_generation.py  demo_ddl_parsing.py  test_config_credentials.py  test_data_insert_proper_flow.py  test_data_insert_security.py  test_data_integration_e2e.py  test_data_validation_edge_cases.py  test_ddl_endpoint.py  test_ddl_generation.py  test_ddl_parsing.py  test_instrospect.py  test_integration_introspection.py  test_phase10_ddl_execution.py  test_phase10_persistence_flows.py  test_schema_cache.py  test_schema_endpoint.py  test_schema_model.py  test_schema_mutations.py  test_sql_validation_phase10.py  test_user_flows_phase10.py
frontend/: .eslintrc.cjs  .prettierignore  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: HistoryList.jsx  QueryPlanVisualization.jsx
frontend/src/components/common/: DataTypeSelect.jsx  Toast.jsx
frontend/src/context/: ThemeContext.jsx
frontend/src/utils/: api.js  dbStorage.js  downloads.js  fileParser.js
infra/: docker-compose.yaml
infra/sql/: init-analytics.sql  init-provisioned-dbs.sql  init-query-history.sql  init-sales.sql
(+15 files in other folders)
